# http-server

./: CMakeLists.txt  README.md  dev.bat  simple.bat  your_program.sh
codecrafters-http-server-c/: CMakeLists.txt  CONNECTION_CLOSE_TEST.md  IMPLEMENTATION_SUMMARY.md  README.md  codecrafters.yml  dev.bat  simple.bat  test_connection_close.bat  vcpkg.json  your_program.sh
codecrafters-http-server-c/src/: main.c
src/: main.c
